--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/stellarpay?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/link2pay?schema=public"
 
 # Stellar Network
 STELLAR_NETWORK=testnet
