--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-VITE_APP_NAME=StellarPay
+VITE_APP_NAME=Link2Pay
 VITE_API_URL=http://localhost:3001
 VITE_STELLAR_NETWORK=testnet
 VITE_HORIZON_URL=https://horizon-testnet.stellar.org
