--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,12 @@
     "express-rate-limit": "^7.1.0",
     "helmet": "^7.1.0",
     "nanoid": "^5.0.4",
+    "winston": "^3.11.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/winston": "^2.4.4",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "prisma": "^5.10.0",
