--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
     "@stellar/freighter-api": "^2.0.0",
     "@stellar/stellar-sdk": "^12.0.0",
     "@tanstack/react-query": "^5.0.0",
