--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,7 +11,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' https://link2pay-app.onrender.com https://horizon.stellar.org https://horizon-testnet.stellar.org https://api.coingecko.com; font-src 'self' https://fonts.gstatic.com; object-src 'none'; media-src 'none'; frame-src 'none'; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; upgrade-insecure-requests"
+          "value": "default-src 'none'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' https://link2pay-app.onrender.com https://horizon.stellar.org https://horizon-testnet.stellar.org https://api.coingecko.com; font-src 'self' https://fonts.gstatic.com; object-src 'none'; media-src 'none'; frame-src 'none'; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; upgrade-insecure-requests"
         },
         {
           "key": "Strict-Transport-Security",
