feat: Add network detection and enforcement for payments
This commit implements strict network validation to prevent payment errors
when users have their Freighter wallet on the wrong network.

## Features

### Database Changes
- Added `networkPassphrase` field to invoices table
- Each invoice now stores the network it was created on (Testnet/Mainnet)

### Backend Changes
- Invoice creation now captures and stores networkPassphrase
- Public invoice endpoint returns networkPassphrase
- Payment intent endpoint uses invoice's networkPassphrase
- Full support for both Testnet and Mainnet invoices

### Frontend Changes

#### Network Store
- New `networkStore` for managing network state
- Persists network selection in localStorage
- Provides networkPassphrase for transactions

#### Network Toggle Component
- UI toggle to switch between Testnet/Mainnet
- Visible in payment pages and dashboard
- Automatically disconnects wallet on network change

#### Payment Flow Improvements
- Displays invoice network prominently ("TESTNET PAYMENT" badge)
- Auto-detects Freighter wallet network every 2 seconds
- Compares Freighter network with invoice network
- Shows blocking error banner on mismatch with:
  - Clear explanation of the problem
  - Step-by-step instructions to fix
  - Button to disconnect and reconnect
- Disables payment button until networks match
- Automatically enables payment when user switches network

#### Invoice Creation
- Invoices are created with current network from networkStore
- Ensures invoice is bound to the correct network

### User Experience
- Prevents confusing network mismatch errors
- Guides users to fix network settings
- Auto-recovers when user switches to correct network
- Clear visual indicators of required network

### Files Changed
- .gitignore: Added references/ and .claude/ folders
- Backend: schema, services, routes, types
- Frontend: PaymentFlow, InvoiceForm, new NetworkToggle component

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,39 @@
 # Server
 PORT=3001
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://localhost:4173
 
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/link2pay?schema=public"
 
-# Stellar Network
-STELLAR_NETWORK=testnet
-HORIZON_URL=https://horizon-testnet.stellar.org
-SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
-NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+# Stellar Network Configuration
+# NOTE: The backend now supports BOTH testnet and mainnet dynamically.
+# These settings define the DEFAULT network, but the backend will automatically
+# detect and handle transactions from either network without restart.
 
-# USDC Issuer (Testnet)
-USDC_ISSUER=GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
+# Default Network: Mainnet (production)
+STELLAR_NETWORK=public
+HORIZON_URL=https://horizon.stellar.org
+SOROBAN_RPC_URL=https://soroban-mainnet.stellar.org
+NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
+
+# To use Testnet as default, uncomment these and comment out mainnet above:
+# STELLAR_NETWORK=testnet
+# HORIZON_URL=https://horizon-testnet.stellar.org
+# SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
+# NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+
+# Asset Issuers (Default Network)
+# NOTE: Asset issuers for both networks are hardcoded in src/config/index.ts
+# These values define the default network issuers only.
+
+# Default: Mainnet Issuers (Circle Official)
+USDC_ISSUER=GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN
+EURC_ISSUER=GDHU6WRG4IEQXM5NZ4BMPKOXHW76MZM4Y2IEMFDVXBSDP6SJY4ITNPP2
+
+# For Testnet default, uncomment these and comment out mainnet above:
+# USDC_ISSUER=GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
+# EURC_ISSUER=GDHU6WRG4IEQXM5NZ4BMPKOXHW76MZM4Y2IEMFDVXBSDP6SJY4ITNPP2
 
 # Watcher
 WATCHER_POLL_INTERVAL_MS=5000
