--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ Thumbs.db
 *.njsproj
 *.sln
 *.sw?
+
+# SSL certificates (local development)
+frontend/.cert/
+
+# Claude Code and reference files
+.claude/
+references/
